ocaml/testsuite/tests/typing-layouts-bits64/unboxed_bits64s_disabled.compilers.reference
File "unboxed_bits64s.ml", line 187, characters 11-17:
187 | type ('a : bits64) t_bits64 = 'a
                 ^^^^^^
Error: Layout bits64 is more experimental than allowed by -extension layouts.
       You must enable -extension layouts_beta to use this feature.
